--- a/index.html
+++ b/index.html
@@ -3,11 +3,77 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" />
-    <title>Planets</title>
+      <link rel="stylesheet" href="style.css" />
+      <title>Planetary Factsheet</title>
   </head>
-
   <body>
+    <h1>Planetary Factsheet</h1>
+    <table>
+      <tr>
+        <th>Planets</th>
+          <th id="venus">VENUS</th>
+          <th id="jupiter">JUPITER</th>
+          <th id="uranus">URANUS</th>
+          <th id="neptune">NEPTUNE</th>
+      </tr>
+      <tr>
+        <td>Photo</td>
+          <td><img src="folder/name.jpeg" alt=Venus></td>
+      </tr>
+      <tr>
+        <td>Mass (10^24 kg)</td>
+          <td>4.87</td>
+          <td>1898</td>
+          <td>86.8</td>
+          <td>102</td>
+      </tr>
+      <tr>
+        <td>Diameter(km)</td>
+          <td>12,104</td>
+          <td>142,984</td>
+          <td>51,118</td>
+          <td>49,528</td>
+      </tr>
+      <tr>
+        <td>Density(kg/m^3)</td>
+          <td>5243</td>
+          <td>1326</td>
+          <td>1270</td>
+          <td>1638</td>
+      </tr>
+      <tr>
+        <td>Gravity(m/s^2)</td>
+          <td>8.9</td>
+          <td>23.1</td>
+          <td>8.7</td>
+          <td>11.0</td>
+      </tr>
+      <tr>
+        <td>Escape Velocity(km/s)</td>
+          <td>10.4</td>
+          <td>59.5</td>
+          <td>21.3</td>
+          <td>23.5</td>
+      </tr>
+      <tr>
+        <td>Rotation Period(hours)</td>
+          <td>-5832.5</td>
+          <td>9.9</td>
+          <td>-17.2</td>
+          <td>16.1</td>
+      </tr>
+      <tr>
+        <td>Length of Day(hours)</td>
+          <td>2802.0</td>
+          <td>9.9</td>
+          <td>17.2</td>
+          <td>16.1</td>
+      </tr>
+
+
+
+
+    </table>
 
   </body>
 
