--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       </tr>
       <tr>
         <td>Photo</td>
-          <td><img src="folder/name.jpeg" alt=Venus></td>
+          <td><img src="images/venus.jpg" alt=Venus></td>
+          <td><img src="images/jupiter.jpg" alt=Venus></td>
+          <td><img src="images/uranus.jpg" alt=Venus></td>
+          <td><img src="images/neptne.jpg" alt=Venus></td>
       </tr>
       <tr>
         <td>Mass(10^24 kg)</td>
