--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <td><img src="images/venus.jpg" alt=Venus></td>
           <td><img src="images/jupiter.jpg" alt=Venus></td>
           <td><img src="images/uranus.jpg" alt=Venus></td>
-          <td><img src="images/neptne.jpg" alt=Venus></td>
+          <td><img src="images/neptune.jpg" alt=Venus></td>
       </tr>
       <tr>
         <td>Mass(10^24 kg)</td>
