--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
           <td>17.2</td>
           <td>16.1</td>
       </tr>
-
-
-
-
     </table>
-
+    <h3>Data from: <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/">NASA</a></h3>
   </body>
-
 </html>
